<resources>
    <string name="app_name">Uni-Ca_User</string>
    <string name="textTitle2">Uni-Ca</string>
    <string name="textTitle1">サービス券電子化システム</string>
    <string name="textLogin">ログイン</string>
    <string name="textUserID">ユーザーID</string>
    <string name="textPassword">パスワード</string>
    <string name="textUserIDHint">ex)rikao21</string>
    <string name="textLoginButton">ログインする</string>
    <string name="textNewAccount">新規登録はこちら</string>
    <string name="textNotAccept">同意しません</string>
    <string name="textAccept">同意します</string>
    <string name="textBack">戻る</string>
    <string name="textNext">次へ</string>
    <string name="textCaution">"個人情報等の取り扱いに関して 理科大チームは、お客様の個人情報等の取扱いについて、下記のとおりお約束いたします。 記 １．\t個人情報の利用目的について
        理科大チームは、お客様からご提示いただいた名前、住所、電話番号、性別その他のお客様個人に関わる情報（以下、「個人情報等」といいます）を、お客様へ適した商品やサービス、及び会報誌・ダイレクトメール等による各種情報のご提供のために利用させていただき、お客様の承諾なく、他の目的には利用いたしません。
        ２．個人情報の第三者提供について 理科大チームでお預かりした個人情報等を、以下のいずれかに該当する場合を除き、第三者へ提供、取り扱いを委託することはありません。 ①お客様の事前の承諾を得た場合
        ②業務委託会社に対して、お客様に明示した利用目的の達成のために必要な範囲で個人情報等の取扱いを委託する場合 ③法令の定めにより提供を求められた場合 ３．個人情報の開示等について
        理科大チームは、個人情報等の開示、変更、削除の求めがあった場合には、お客様ご本人であることをご確認させていただいたうえで、すみやかに対応いたします。 以上 "
    </string>
    <string name="textInput">個人情報の入力</string>
    <string name="textPasswordHint">********</string>
    <string name="textMail">メールアドレス</string>
    <string name="textSampleMail">ex)sample@ed.socu.ac.jp</string>
    <string name="textBirthday">生年月日（2000年1月1日→2000/01/01）</string>
    <string name="textBirthdayHint">ex)2000/01/01</string>
    <string name="textGender">性別</string>
    <string name="textMan">男性</string>
    <string name="textWoman">女性</string>
    <string name="textConfirmation">確認画面</string>
    <string name="textBirthday_confirmation">生年月日</string>
    <string name="textConfirmation2">上記の内容でお間違いなければ送信ボタンを押してください</string>
    <string name="textSend">送信</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="mapSearchText">マップ検索</string>
    <string name="searchText">店舗検索</string>
    <string name="shopInfoText">店舗情報</string>
    <string name="settingsText">各種設定</string>
    <string name="changeInfoText">登録内容の変更</string>
    <string name="helpText">ヘルプ</string>
    <string name="inquiryText">お問い合わせ</string>
    <string name="deleateInfoText">登録内容の消去</string>
    <string name="logoutText">ログアウト</string>
    <string name="title_activity_maps">Map</string>
    <string name="shopNameText">りかだいラーメン</string>
    <string name="text1">サービス一覧</string>
    <string name="text2">店長おすすめ！</string>
    <string name="pickUptext">りかだいラーメン大</string>
    <string name="explainSampleText">これはうまい！凝縮された豚骨スープ、完成された麺の絶妙な固さ、喉ごし、風味…！ぜひ一度はご賞味あれ！！</string>
    <string name="qrcodeText">QRコードを表示する</string>
    <string name="service1">替え玉一杯無料</string>
    <string name="service2">デザート(小)無料</string>
    <string name="service3">ドリンク50円引き</string>
    <string name="caution1Text">※サービスは入店につき一度だけ利用できます。</string>
    <string name="caution3">※入店ごとに一回限り</string>
    <string name="sampleText">sample1</string>
    <string name="sampleText2">sample2</string>
    <string name="text_search">検索</string>
    <string name="text_ikkyu">一久ラーメン</string>
    <string name="text_sankyu">三久ラーメン</string>
    <string name="text_oosakaya">大阪屋</string>
    <string name="text_sanpei">味の三平</string>
    <string name="text_shuuchan">秀ちゃんラーメン</string>
    <string name="textPersonalInformation">プライバシーポリシー</string>
    <string name="textShopName">店名</string>
    <string name="text_caution">※ラーメンの写真は宇部市が公開するオープンデータを使用しています。</string>
    <string name="text_Demo">※デモ版アプリ</string>
    <string name="text_Info">★お知らせ★</string>
    <string name="text_Detail">詳細説明</string>
    <string name="text_caution3">※お店にある端末にかざしてください</string>
    <string name="textStanpRally">スタンプラリー</string>
    <string name="textQRcodeReader">QRコードリーダーを起動する</string>
    <string name="textExplainStamp">スタンプが3つ集まるとご当地特産品をプレゼント！</string>
    <string name="textDemo">第4回宇部オープンデータコンテストデモ用アプリ</string>
    <string name="text_demo">デモ用アプリ</string>
</resources>
