<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Confirmation">

    <Button
            android:text="@string/textBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_Back" android:textSize="40sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"/>
    <Button
            android:text="@string/textSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_Send" android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/background_light"/>

    <TextView
            android:text="@string/textUserIDHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_UseID"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:textSize="30sp"
            android:textColor="@android:color/holo_red_dark"/>

    <TextView
            android:text="@string/textPasswordHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_Password"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:textColor="@android:color/holo_red_dark"/>

    <TextView
            android:text="@string/textSampleMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_Email"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            android:textColor="@android:color/holo_red_dark"/>

    <TextView
            android:text="@string/textBirthdayHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_Birthday"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            android:textColor="@android:color/holo_red_dark"/>

    <TextView
            android:text="@string/textMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_Gender"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView21"
            android:textColor="@android:color/holo_red_dark"/>

    <TextView
            android:text="@string/textConfirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="35sp"/>
    <TextView
            android:text="@string/textUserID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:textSize="30sp"/>

    <TextView
            android:text="@string/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:textSize="30sp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_UseID" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"/>

    <TextView
            android:text="@string/textMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_Password"/>

    <TextView
            android:text="@string/textBirthday_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_Email"/>

    <TextView
            android:text="@string/textGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_Birthday"/>

    <TextView
            android:text="@string/textConfirmation2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView23" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/textView_Gender"
            android:textSize="20sp"/>
</android.support.constraint.ConstraintLayout>