<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Input">

    <Button
            android:text="@string/textBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_Back" android:textSize="40sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"/>
    <Button
            android:text="@string/textNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_Next" android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/background_light"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_UserID"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:hint="@string/textUserIDHint"
            android:textSize="30sp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_Password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:textSize="30sp"
            android:hint="@string/textPasswordHint"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText_Email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:textSize="30sp"
            android:hint="@string/textSampleMail"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText_Birthday"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:hint="@string/textBirthdayHint"
            android:textSize="30sp"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:id="@+id/radioGroup">

        <RadioButton
                android:text="@string/textMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_Man"
                android:layout_weight="1"
                android:textSize="30sp"/>

        <RadioButton
                android:text="@string/textWoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_Woman"
                android:layout_weight="1"
                android:textSize="30sp"/>
    </RadioGroup>

    <TextView
            android:text="@string/textInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:textSize="35sp"/>

    <TextView
            android:text="@string/textUserID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:textSize="30sp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>

    <TextView
            android:text="@string/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_UserID" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:textSize="30sp"/>

    <TextView
            android:text="@string/textMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_Password" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:textSize="30sp"/>

    <TextView
            android:text="@string/textBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_Email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:textSize="30sp"/>

    <TextView
            android:text="@string/textGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_Birthday" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:textSize="30sp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/genderText"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"/>
</android.support.constraint.ConstraintLayout>