<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QrcodeSending">

    <Button
            android:text="@string/mapSearchText"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:id="@+id/button_MapSearch"
            android:textSize="24sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_ShopSearch"
            />

    <Button
            android:text="@string/searchText"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:id="@+id/button_ShopSearch"
            android:textSize="24sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            app:layout_constraintStart_toEndOf="@+id/button_MapSearch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_ShopInfo"/>

    <Button
            android:text="@string/shopInfoText"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:id="@+id/button_ShopInfo"
            android:textSize="24sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintStart_toEndOf="@+id/button_ShopSearch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_Settings"/>

    <Button
            android:text="@string/settingsText"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:id="@+id/button_Settings"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/button_ShopInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/common_google_signin_btn_text_dark_default"/>
    <TextView
            android:text="@string/shopNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView29" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="36sp" android:textColor="@color/colorPrimaryDark"/>
    <TextView
            android:text="@string/service1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView30"
            android:textSize="30sp" android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView29"/>

    <ImageView
            android:layout_width="400dp"
            android:layout_height="400dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView31"/>

    <TextView
            android:text="@string/caution3"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/textView31"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="108dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp"/>
</android.support.constraint.ConstraintLayout>