<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_UserID"
            android:hint="@string/textUserID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:textSize="36sp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/editText_Password"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_Password"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_UserID"
            android:hint="@string/textPassword"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/button_Login"/>

    <TextView
            android:text="@string/textTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView26"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"/>

    <TextView
            android:text="@string/textTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:textSize="60dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/textView3"/>

    <TextView
            android:text="@string/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/editText_UserID"/>

    <Button
            android:text="@string/textLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_Login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_Password"
            android:background="@color/colorPrimary"
            android:textSize="36sp"
            android:textColor="@android:color/background_light"
            android:layout_marginBottom="54dp"
            app:layout_constraintBottom_toTopOf="@+id/button_new"/>

    <Button
            android:text="@string/textNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_new"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/button_Login"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="70dp"
            android:textSize="36sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/background_light"/>

    <TextView
            android:text="@string/text_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView26"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="30sp"
            android:textColor="@color/zxing_viewfinder_laser"/>

</android.support.constraint.ConstraintLayout>