<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:map="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/map"
                                             tools:context=".MapsActivity"
>
    <Button
            android:text="@string/mapSearchText"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:id="@+id/button_MapSearch"
            android:textSize="24sp"
            android:background="@android:color/darker_gray"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            map:layout_constraintStart_toStartOf="parent" map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toStartOf="@+id/button_ShopSearch"/>
    <Button
            android:text="@string/searchText"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:id="@+id/button_ShopSearch"
            android:textSize="24sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            map:layout_constraintStart_toEndOf="@+id/button_MapSearch"
            map:layout_constraintBottom_toBottomOf="parent" map:layout_constraintEnd_toStartOf="@+id/button_ShopInfo"/>
    <Button
            android:text="@string/shopInfoText"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:id="@+id/button_ShopInfo"
            android:textSize="24sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            map:layout_constraintStart_toEndOf="@+id/button_ShopSearch"
            map:layout_constraintBottom_toBottomOf="parent" map:layout_constraintEnd_toStartOf="@+id/button_Settings"/>
    <Button
            android:text="@string/settingsText"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:id="@+id/button_Settings"
            android:textSize="24sp"
            map:layout_constraintStart_toEndOf="@+id/button_ShopInfo" map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent" android:background="@color/colorPrimaryDark"
            android:textColor="@color/common_google_signin_btn_text_dark_default"/>
</android.support.constraint.ConstraintLayout>